Add a success-url for status.json test
In the status.json test, we don't have success-url defined for any of
the job. Add one, just so that we can make sure it's plumbing through
how we think.

Change-Id: I5df20f900c1ea75e1a84df7e885bf4229d020df0

--- a/tests/fixtures/config/single-tenant/git/common-config/zuul.yaml
+++ b/tests/fixtures/config/single-tenant/git/common-config/zuul.yaml
@@ -66,6 +66,7 @@
 
 - job:
     name: project-test2
+    success-url: http://logs.example.com/{change.number}/{change.patchset}/{pipeline.name}/{job.name}
 
 - job:
     name: project1-project2-integration
