Update to nodepool_region_name from zookeeper data
It seems we didn't correctly setup our region_name first time round.
Rename to nodepool_region_name to be more consistent with zookeeper
data format.

Change-Id: I069203328cce0bc2d4bf31f31351209bf2b6cb5a
Depends-On: Ia13e6e9e89d24ac3c9c62a0286fba0279b5408b3
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/tests/fixtures/config/ansible/git/common-config/playbooks/check-vars.yaml
+++ b/tests/fixtures/config/ansible/git/common-config/playbooks/check-vars.yaml
@@ -4,7 +4,7 @@
       assert:
         that:
           - nodepool_az == 'test-az'
-          - nodepool_region == 'test-region'
+          - nodepool_region_name == 'test-region'
           - nodepool_provider == 'test-provider'
 
     - name: Assert zuul-executor variables are valid.
