Move tenant_config option to scheduler section
This is only used by the scheduler and makes more sense here.

Change-Id: I85009894fd5bd02e8795d59ea2a2612b46941718

--- a/tests/fixtures/zuul-sql-driver.conf
+++ b/tests/fixtures/zuul-sql-driver.conf
@@ -1,9 +1,8 @@
 [gearman]
 server=127.0.0.1
 
-[zuul]
+[scheduler]
 tenant_config=main.yaml
-url_pattern=http://logs.example.com/{change.number}/{change.patchset}/{pipeline.name}/{job.name}/{build.number}
 
 [merger]
 git_dir=/tmp/zuul-test/merger-git
