Rename git_host to server in github driver
To be more consistent with the gerrit driver.

Change-Id: I96da4de53294db238dd22aca7387434d86e97a46

--- a/tests/fixtures/zuul-github-driver.conf
+++ b/tests/fixtures/zuul-github-driver.conf
@@ -23,4 +23,4 @@ sshkey=/home/zuul/.ssh/id_rsa
 [connection github_ent]
 driver=github
 sshkey=/home/zuul/.ssh/id_rsa
-git_host=github.enterprise.io
+server=github.enterprise.io
