--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -2,8 +2,8 @@
     name: openstack-infra/zuul
     check:
       jobs:
-        - tox-docs
-        - tox-cover
-        - tox-linters
-        - tox-py35
-        - tox-tarball
+        - zuul-tox-docs
+        - zuul-tox-cover
+        - zuul-tox-linters
+        - zuul-tox-py35
+        - zuul-tox-tarball
