Run the new fancy zuul-jobs versions of jobs
Change-Id: I9cd61ab18338feab35dcc285111b3749bf7a9d18

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -7,3 +7,8 @@
         - tox-linters
         - tox-py35
         - tox-tarball
+        - zuul-tox-docs
+        - zuul-tox-cover
+        - zuul-tox-linters
+        - zuul-tox-py35
+        - zuul-tox-tarball
