DNM Broken Pre Playbook
Change-Id: I53eda679450c1dc295d099f4b2c08a01c2afecef

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,10 @@
+- job:
+    name: broken
+    parent: base
+    description: |
+      Job with broken pre-playbook
+    pre-run: playbooks/broken
+
 - project:
     name: openstack-infra/zuul
     check:
@@ -12,3 +19,4 @@
         - zuul-tox-linters
         - zuul-tox-py35
         - zuul-tox-tarball
+        - broken
