DNM Broken Pre Playbook that fails pre-task
Change-Id: I2e684cc40d96e284af57f3575b2e9152e1feb7b6

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,14 +1,12 @@
+- job:
+    name: broken
+    parent: base
+    description: |
+      Job with broken pre-playbook
+    pre-run: playbooks/broken
+
 - project:
     name: openstack-infra/zuul
     check:
       jobs:
-        - tox-docs
-        - tox-cover
-        - tox-linters
-        - tox-py35
-        - tox-tarball
-        - zuul-tox-docs
-        - zuul-tox-cover
-        - zuul-tox-linters
-        - zuul-tox-py35
-        - zuul-tox-tarball
+        - broken
