--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,14 +1,32 @@
+- nodeset:
+    name: ceph-cluster
+    nodes:
+      - name: controller
+        label: ubuntu-xenial
+      - name: compute1
+        label: ubuntu-xenial
+      - name: compute2
+        label: ubuntu-xenial
+    groups:
+      - name: ceph-osd
+        nodes:
+          - controller
+      - name: ceph-monitor
+        nodes:
+          - controller
+          - compute1
+          - compute2
+
+- job:
+    parent: base
+    name: ceph-multinode
+    nodes: ceph-cluster
+    run: playbooks/showceph
+    roles:
+      - zuul: openstack-infra/zuul-jobs
+
 - project:
     name: openstack-infra/zuul
     check:
       jobs:
-        - tox-docs
-        - tox-cover
-        - tox-linters
-        - tox-py35
-        - tox-tarball
-        - zuul-tox-docs
-        - zuul-tox-cover
-        - zuul-tox-linters
-        - zuul-tox-py35
-        - zuul-tox-tarball
+        - ceph-multinode
