Support relative urls in success-url
And failure-url.  This is an attempt to make it easy to use the
log_url return value, but still indicate that, say, the openstack
docs job should return a deep link to the doc index page.

Change-Id: I606fb7475a026f9a6d99c91b2b8e2223d7983daf

--- a/tests/fixtures/config/data-return/git/common-config/zuul.yaml
+++ b/tests/fixtures/config/data-return/git/common-config/zuul.yaml
@@ -15,8 +15,14 @@
 - job:
     name: data-return
 
+- job:
+    name: data-return-relative
+    run: playbooks/data-return
+    success-url: docs/index.html
+
 - project:
     name: org/project
     check:
       jobs:
         - data-return
+        - data-return-relative
