--- a/tests/fixtures/layout-footer-message.yaml
+++ b/tests/fixtures/layout-footer-message.yaml
@@ -10,21 +10,21 @@ pipelines:
       gerrit:
         - event: comment-added
           approval:
-            - approved: 1
+            - Approved: 1
     success:
       gerrit:
-        verified: 2
+        Verified: 2
         submit: true
       smtp:
         to: success@example.org
     failure:
       gerrit:
-        verified: -2
+        Verified: -2
       smtp:
         to: failure@example.org
     start:
       gerrit:
-        verified: 0
+        Verified: 0
     precedence: high
 
 projects:
