DNM - add upper-constraints to tox
Need a test job to test out some upper-constraints things.

Change-Id: If809f9b4c3b61423ee779c4c59ad40b3098114c9
Depends-On: Ibf8976da3e73d15ebb8cc51fa84ffb6e133b306d
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,10 @@
+- job:
+    name: openstack-test
+    parent: tox-py35
+    vars:
+      tox_env:
+        UPPER_CONSTRAINTS_FILE: foo.txt
+
 - project:
     name: openstack-infra/zuul
     check:
@@ -5,5 +12,5 @@
         - tox-docs
         - tox-cover
         - tox-linters
-        - tox-py35
+        - openstack-test
         - tox-tarball
