DNM - add upper-constraints to tox
Need a test job to test out some upper-constraints things.

Change-Id: If809f9b4c3b61423ee779c4c59ad40b3098114c9
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,8 @@
+- job:
+    name: openstack-test
+    parent: tox-py35
+    pre-run: playbook/openstack/test
+
 - project:
     name: openstack-infra/zuul
     check:
@@ -5,5 +10,5 @@
         - tox-docs
         - tox-cover
         - tox-linters
-        - tox-py35
+        - openstack-py35
         - tox-tarball
