--- a/tests/fixtures/layouts/repo-checkout-timer-override.yaml
+++ b/tests/fixtures/layouts/repo-checkout-timer-override.yaml
@@ -7,6 +7,8 @@
 
 - job:
     name: integration
+    branches: master
+    override-branch: stable/havana
     required-projects:
       - org/project1
 
