--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -133,6 +133,16 @@
         ZUUL_SCHEDULER_COUNT: 2
 
 - job:
+    name: zuul-nox-py312
+    # This could probably use some refactoring to have a base unittest job
+    # that isn't python version specific.
+    parent: zuul-nox-py311
+    vars:
+      python_use_pyenv: true
+      nox_force_python: "3.12"
+      python_version: "3.12"
+
+- job:
     name: zuul-build-dashboard
     parent: build-javascript-deployment
     description: |
@@ -353,6 +363,7 @@
             nodeset: ubuntu-jammy
         - zuul-nox-py311
         - zuul-nox-py311-multi-scheduler
+        - zuul-nox-py312
         - zuul-build-dashboard-openstack-whitelabel
         - zuul-build-dashboard-software-factory
         - zuul-build-dashboard-opendev
@@ -386,6 +397,7 @@
               nox_install_bindep: false
             nodeset: ubuntu-jammy
         - zuul-nox-py311
+        - zuul-nox-py312
         - zuul-build-dashboard
         - nodejs-run-lint:
             vars:
