--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [pbr]
 warnerrors = True
