Add python 3.12 testing to Zuul
We use pyenv to install python3.12 on ubuntu jammy (which doesn't have
native packages for this version of python). Additionally we bump the
container image builds to using python3.12 which will ensure coverage of
this python version in jobs that rely on the containers.

Change-Id: I20a57f6d29699886867ce912e9943c59aa9963f4

--- a/zuul/lib/ansible-config.conf
+++ b/zuul/lib/ansible-config.conf
@@ -1,8 +1,9 @@
 # This file describes the currently supported ansible versions
 [common]
 default_version = 8
+# Setuptools is required for pkg_resources when using python3.12.
 # OpenStackSDK 0.99.0 coincides with CORS header problems in some providers
-requirements = openstacksdk<0.99 openshift jmespath google-cloud-storage pywinrm boto3 azure-storage-blob ibm-cos-sdk netaddr passlib google-re2
+requirements = setuptools openstacksdk<0.99 openshift jmespath google-cloud-storage pywinrm boto3 azure-storage-blob ibm-cos-sdk netaddr passlib google-re2
 
 [8]
 requirements = ansible>=8.0,<9.0
