--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -342,6 +342,11 @@
     pre-run: playbooks/release/pre.yaml
     nodeset: ubuntu-jammy
 
+- job:
+    name: verify-delay-bug
+    run: playbooks/bug.yaml
+    nodeset: ubuntu-jammy
+
 - project:
     queue: zuul
     vars:
@@ -350,38 +355,7 @@
       ensure_tox_version: "<4"
     check:
       jobs:
-        - zuul-build-image
-        - zuul-nox-docs:
-            vars:
-              nox_force_python: "3.11"
-              python_version: "3.11"
-        - nox-linters:
-            vars:
-              nox_install_bindep: false
-            nodeset: ubuntu-jammy
-        - zuul-nox-py311
-        - zuul-nox-py311-multi-scheduler
-        - zuul-build-dashboard-openstack-whitelabel
-        - zuul-build-dashboard-software-factory
-        - zuul-build-dashboard-opendev
-        - nodejs-run-lint:
-            vars:
-              zuul_work_dir: "{{ zuul.project.src_dir }}/web"
-            nodeset: ubuntu-jammy
-        - nodejs-run-test:
-            vars:
-              zuul_work_dir: "{{ zuul.project.src_dir }}/web"
-            files:
-              - web/.*
-            nodeset: ubuntu-jammy
-        - zuul-stream-functional-8
-        - zuul-stream-functional-9
-        - zuul-nox-remote
-        - zuul-quick-start:
-            requires: nodepool-container-image
-            dependencies: zuul-build-image
-        - zuul-nox-zuul-client
-        - zuul-build-python-release
+        - verify-delay-bug
     gate:
       jobs:
         - zuul-upload-image
