Use exec in tutorial docker-compose files
In the tutorial docker-compose files, we override the zuul container
commands to run a shell script to wait for certs before starting
Zuul.  When `podman-compose down` runs `podman -t 10 stop`, it sends a
signal to dumb-init which sends a signal to the shell we configured
as well as to the zuul process.  The zuul process starts to shutdown
but the shell kills it before it finishes.

If the process exits before releasing the ssh stream event election,
then the quick-start job runs one of the follow-on tutorials which
restart the scheduler, then the scheduler will wait for the election
timeout of 30 seconds before it starts receiving events.  If the
tutorial playbook has proceeded to emit an event (eg "recheck"), then
the event will be missed and the job fail.

To correct this, exec the zuul processes after our shell script is
done so that only zuul receives the kill signal and handles it
completely.  Same for zk on general principle.

Change-Id: I90edbc68712bbd92ad1ac98b5960347de29b5342

--- a/doc/source/examples/docker-compose.yaml
+++ b/doc/source/examples/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
       - "./zoo.cfg:/conf/zoo.cfg:z"
       - "zk-data:/data"
       - "zk-datalog:/datalog"
-    command: "sh -c '/var/playbooks/wait-to-start-certs.sh && zkServer.sh start-foreground'"
+    command: "sh -c '/var/playbooks/wait-to-start-certs.sh && exec zkServer.sh start-foreground'"
     networks:
       - zuul
   mysql:
@@ -73,7 +73,7 @@ services:
     command: |
       sh -c '/var/playbooks/wait-to-start-certs.sh && \
              /var/playbooks/wait-to-start.sh && \
-             zuul-scheduler -f'
+             exec zuul-scheduler -f'
     # FIXME: The scheduler has no ansible anymore so use the executor image.
     #        This needs to be changes such that ansible is not required for startup.
     image: quay.io/zuul-ci/zuul-scheduler
@@ -88,7 +88,7 @@ services:
   web:
     command: |
       sh -c '/var/playbooks/wait-to-start-certs.sh && \
-             zuul-web -f'
+             exec zuul-web -f'
     depends_on:
       - scheduler
       - mysql
@@ -121,7 +121,7 @@ services:
       - "logs:/srv/static/logs:z"
       - "certs:/var/certs:z"
       - "lib-zuul-executor:/var/lib/zuul:z"
-    command: "sh -c '/var/playbooks/wait-to-start-certs.sh && zuul-executor -f'"
+    command: "sh -c '/var/playbooks/wait-to-start-certs.sh && exec zuul-executor -f'"
     networks:
       - zuul
   node:
@@ -146,7 +146,7 @@ services:
       - "certs:/var/certs:z"
     ports:
       - "8005:8005"
-    command: "sh -c '/var/playbooks/wait-to-start-certs.sh && nodepool-launcher -f'"
+    command: "sh -c '/var/playbooks/wait-to-start-certs.sh && exec nodepool-launcher -f'"
     networks:
       - zuul
   logs:
