--- a/tests/fixtures/config/ansible/main9.yaml
+++ b/tests/fixtures/config/ansible/main9.yaml
@@ -1,9 +1,11 @@
 - tenant:
     name: tenant-one
-    default-ansible-version: '6'
+    default-ansible-version: '9'
     source:
       gerrit:
         config-projects:
           - common-config
         untrusted-projects:
           - org/project
+          - bare-role
+          - org/ansible
