--- a/tests/fixtures/config/executor-facts/main9.yaml
+++ b/tests/fixtures/config/executor-facts/main9.yaml
@@ -1,7 +1,9 @@
 - tenant:
     name: tenant-one
-    default-ansible-version: '6'
+    default-ansible-version: '9'
     source:
       gerrit:
         config-projects:
           - common-config
+        untrusted-projects:
+          - org/project
