Allow circular dependencies in the Zuul project
Since we're currently merging significant changes related to
circular dependencies, the Zuul community might want to experiment
with behavior on a live production system.  Enable them for the
"zuul" shared queue for testing purposes only.

The Zuul maintainers should still not approve changes that would
impede our ability to continuously deploy Zuul and its components.

Change-Id: I65bc34fb1040a4a3083a9941e9006fbe24d8a93b

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,5 +1,13 @@
 - queue:
     name: zuul
+    # We don't really want to use circular dependencies in the Zuul
+    # project (for our interactions with other projects, we prefer to
+    # be able to do stepwise upgrades to support continuous
+    # deployment).  However, this is enable to allow Zuul developers
+    # to observe circular dependencies in a live environment via test
+    # changes that are not intended to be merged (or otherwise have no
+    # impact on our upgrade and continuous deployment processes).
+    allow-circular-dependencies: true
 
 - nodeset:
     name: zuul-functional-temp-master
