--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -378,8 +378,14 @@
         - zuul-stream-functional-9
         - zuul-nox-remote
         - zuul-quick-start:
-            requires: nodepool-container-image
-            dependencies: zuul-build-image
+            requires:
+              - nodepool-container-image
+              - zuul-container-image
+            dependencies:
+              - name: zuul-build-image
+                soft: true
+              - name: nodepool-build-image
+                soft: true
         - zuul-nox-zuul-client
         - zuul-build-python-release
     gate:
