--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ tzlocal<3.0  # https://github.com/agronholm/apscheduler/discussions/570
 PrettyTable>=0.6,<0.8
 babel>=1.0
 netaddr
-kazoo>=2.9.0
+# Pinned due to increase in unit test timeouts related to connection issues
+kazoo==2.9.0
 sqlalchemy>=2.0.0
 alembic
 cryptography>=39.0.0
