--- a/tests/fixtures/config/ansible-unreachable/git/org_project/playbooks/post.yaml
+++ b/tests/fixtures/config/ansible-unreachable/git/org_project/playbooks/post.yaml
@@ -1,3 +1,17 @@
+- hosts: all:!zuul_unreachable
+  gather_facts: no
+  tasks:
+    - name: Output debug statement
+      debug:
+        msg: "This host is not unreachable: {{ inventory_hostname }}"
+
+- hosts: zuul_unreachable
+  gather_facts: no
+  tasks:
+    - name: Output debug statement
+      debug:
+        msg: "This host is unreachable: {{ inventory_hostname }}"
+
 - hosts: localhost
   gather_facts: no
   tasks:
