Run some eBPF bcc profiling in zuul nox jobs
This aims to collect system info like slow file reads/writes and
python/jvm virtual machine stats for processes running under those
runtimes.

This info may be helpful in debugging slow unittest for example.

Change-Id: Icdacf899d5b3daded8543d20f05e672c36ec0872

--- a/playbooks/zuul-nox/post-system-logs.yaml
+++ b/playbooks/zuul-nox/post-system-logs.yaml
@@ -4,3 +4,10 @@
   tasks:
     - name: Collect zookeeper logs
       shell: "cp /opt/zookeeper/logs/* {{ zuul_output_dir }}/logs/"
+    - name: Collect bcc fileslower logs
+      shell: "cp /tmp/bcc_fileslower.log {{ zuul_output_dir }}/logs/"
+    # Disabled as this doesn't appear to work with Jammy.
+    #- name: Collect bcc runqslower logs
+    #  shell: "cp /tmp/bcc_runqslower.log {{ zuul_output_dir }}/logs/"
+    - name: Collect bcc ustat logs
+      shell: "cp /tmp/bcc_ustat.log {{ zuul_output_dir }}/logs/"
