--- a/playbooks/zuul-nox/post-system-logs.yaml
+++ b/playbooks/zuul-nox/post-system-logs.yaml
@@ -4,3 +4,12 @@
   tasks:
     - name: Collect zookeeper logs
       shell: "cp /opt/zookeeper/logs/* {{ zuul_output_dir }}/logs/"
+    - name: Collect bcc fileslower logs
+      shell: "cp /tmp/bcc_fileslower.log {{ zuul_output_dir }}/logs/"
+    # Disabled as this doesnt appear to work with Jammy.
+    #- name: Collect bcc runqslower logs
+    #  shell: "cp /tmp/bcc_runqslower.log {{ zuul_output_dir }}/logs/"
+    - name: Collect bcc ustat python logs
+      shell: "cp /tmp/bcc_ustat_python.log {{ zuul_output_dir }}/logs/"
+    - name: Collect bcc ustat java logs
+      shell: "cp /tmp/bcc_ustat_java.log {{ zuul_output_dir }}/logs/"
