--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -97,6 +97,17 @@
       python_version: "3.11"
 
 - job:
+    name: zuul-nox-upgrade
+    parent: zuul-nox
+    run: playbooks/zuul-upgrade/run.yaml
+    failure-output:
+      # This matches stestr output when a test fails
+      # {1} tests.unit.test_blah [5.743446s] ... FAILED
+      - '\{\d+\} (.*?) \[[\d\.]+s\] \.\.\. FAILED'
+    vars:
+      nox_session: upgrade
+
+- job:
     # Zuul cient uses this job so we can't just delete it yet.
     name: zuul-tox-zuul-client
     parent: zuul-nox
