Temporarily pin urllib3 before 2.1.0
It looks like urllib3 version 2.1.0 causes problems when connecting to
Windows nodes.

Change-Id: I5d4a33c477d6872389c1d4197e926991b70f06ec

--- a/zuul/lib/ansible-config.conf
+++ b/zuul/lib/ansible-config.conf
@@ -2,7 +2,8 @@
 [common]
 default_version = 8
 # OpenStackSDK 0.99.0 coincides with CORS header problems in some providers
-requirements = openstacksdk<0.99 openshift jmespath google-cloud-storage pywinrm boto3 azure-storage-blob ibm-cos-sdk netaddr passlib google-re2
+# urllib3 >= 2.1.0 seems to cause problems with Windows nodes
+requirements = openstacksdk<0.99 openshift jmespath google-cloud-storage pywinrm boto3 azure-storage-blob ibm-cos-sdk netaddr passlib google-re2 urllib3<2.1.0
 
 [8]
 requirements = ansible>=8.0,<9.0
