--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -386,6 +386,7 @@
         - zuul-nox-py311
         - zuul-nox-py311-multi-scheduler
         - zuul-nox-py312
+        - zuul-nox-upgrade
         - zuul-build-dashboard-openstack-whitelabel
         - zuul-build-dashboard-software-factory
         - zuul-build-dashboard-opendev
@@ -420,6 +421,7 @@
             nodeset: ubuntu-jammy
         - zuul-nox-py311
         - zuul-nox-py312
+        - zuul-nox-upgrade
         - zuul-build-dashboard
         - nodejs-run-lint:
             vars:
