Build python3.12 with optimizations enabled
This enables python compile time optimizations which will result in
slower python builds but faster python runtime. The idea here is to
check if we can offset slower buidls with faster test runtimes resulting
in faster roundtrip wall time for the job as a whole.

Depends-On: https://review.opendev.org/c/zuul/zuul-jobs/+/915366
Change-Id: I6715715ffa8a2e2fd2696708564b3dd67c596c1c

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -149,6 +149,9 @@
       python_use_pyenv: true
       nox_force_python: "3.12"
       python_version: "3.12"
+      # Sacrifice build time for faster runtime
+      python_pyenv_python_cflags: '-march=native -mtune=native'
+      python_pyenv_python_configure_opts: '--enable-optimizations --with-lto'
 
 - job:
     name: zuul-build-dashboard
