Cancel jobs of abandoned circular dep. change
When a change that is part of a circular dependency is abandoned we'd
set the item status to dequeued needing change. This will set all builds
as skipped, overwriting exiting builds.

This means that when the item was removed, we did not cancel any of the
builds. For normal builds this mainly waste resources, but if there are
paused builds, those will be leaked and continue running until the
executor is force-restarted.

The fix here is to cancel the jobs before setting it as dequeued needing
change.

Change-Id: If111fe1a21a1c944abcf460a6601293c255376d6

--- a/tests/fixtures/config/circular-dependencies/main.yaml
+++ b/tests/fixtures/config/circular-dependencies/main.yaml
@@ -12,6 +12,7 @@
           - org/project3
           - org/project5
           - org/project6
+          - org/project7
       github:
         untrusted-projects:
           - gh/project
