WIP Save logs from old side of upgrade job
Save a copy of the testr output from the old side of the upgrade
job to help diagnose any problems that appear.

Change-Id: I159d871d302a3dada1052d03b5953335c42409ff

--- a/playbooks/zuul-upgrade/run.yaml
+++ b/playbooks/zuul-upgrade/run.yaml
@@ -5,6 +5,8 @@
       ref: 'origin/{{ zuul.branch }}'
     - role: nox
       nox_extra_args: '-v -- tests.upgrade.test_upgrade_old'
+    - role: fetch-subunit-output
+    - role: move-logs
     - role: checkout
       ref: '{{ zuul.branch }}'
     - role: nox
