Check pre run failure cases with only 2 retry attempts
test_pre_run_failure_retry has been hitting timeouts semi regularly.
This test was checking that after all retry attempts other things
continue on. Rather than increasing the timeout time to avoid timeouts
we reduce the number of retry attempts from 3 to 2 which should make
things run faster and within the timeout. This should be safe from a
testing perspective because we're still doing at least one retry which
ensures that previous code paths are still exercised.

Change-Id: If78c7cdfac63c30f9e52a1a5984a662ab969c2ee

--- a/tests/fixtures/config/early-failure/git/common-config/zuul.yaml
+++ b/tests/fixtures/config/early-failure/git/common-config/zuul.yaml
@@ -48,6 +48,11 @@
 
 - job:
     name: pre-failure
+    # Set attempts to a value less than the default of three but greater
+    # than 1 which results in no retries. This ensures testing covers code
+    # paths for retries without extra unnecesasry retries which make the
+    # tests run longer.
+    attempts: 2
     files:
       - pre-failure.txt
     pre-run:
