Run py312 jobs on Ubuntu Noble
Ubuntu Noble packages python 3.12 for us. Rather than use pyenv on
Ubuntu Jammy to build python 3.12 which adds time to jobs (and probably
gives us a less efficient python build) we switch the job to run on
Ubuntu Noble using the packaged python instead.

Change-Id: I274d8e922f448be5bc7e3127e66b4bd246eb02d9

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -156,8 +156,11 @@
     # This could probably use some refactoring to have a base unittest job
     # that isn't python version specific.
     parent: zuul-nox-py311
+    nodeset:
+      nodes:
+        - name: ubuntu-noble
+          label: ubuntu-noble
     vars:
-      python_use_pyenv: true
       nox_force_python: "3.12"
       python_version: "3.12"
 
