--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -156,8 +156,8 @@
     # This could probably use some refactoring to have a base unittest job
     # that isn't python version specific.
     parent: zuul-nox-py311
+    nodeset: ubuntu-noble
     vars:
-      python_use_pyenv: true
       nox_force_python: "3.12"
       python_version: "3.12"
 
