--- a/doc/source/examples/docker-compose.yaml
+++ b/doc/source/examples/docker-compose.yaml
@@ -73,7 +73,7 @@ services:
     command: |
       sh -c '/var/playbooks/wait-to-start-certs.sh && \
              /var/playbooks/wait-to-start.sh && \
-             exec zuul-scheduler -f'
+             exec zuul-scheduler -fd'
     # FIXME: The scheduler has no ansible anymore so use the executor image.
     #        This needs to be changes such that ansible is not required for startup.
     image: quay.io/zuul-ci/zuul-scheduler
